...
    @Published var slectedCountry:CountriesModel?
    
    @Published var selectedPaymentType:String?
    
    var exchangeRateList: [String: Double] = [:]

    var favCountries: [String] = ["India","Pakistan","Philippines","Nepal", "Sri Lanka"]
    
  
    
 
    init(coordinator: CurrencyCoordinator?, repository: CountryRepository?) {
        self.coordinator = coordinator
...
