...
        self.setupSearchTextField()
        self.registerTestCases()
    }
    
    func registerTestCases(){
        searchTextField.accessibilityIdentifier = "searchTextField"
        collectionView.accessibilityIdentifier = "CountryPickerCollection"


    }
    
    private func bindViewModel() {
        viewModel?.$filteredCountryList
...
